# singularity-kernel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  coherence.h  kernel.code-workspace  main.cpp  missing_image_archive.txt  phantom.h  seed.h  singularity.md
ai_interface/: aios_contract.h
md/: CMake_Intellisense_Checklist.md  README_CLEANUP.md  _move_log.txt  singularity.md
schema/: aic_schema.json  checkpoint_frame.json  coherence_frame.json  coherence_frame_20250729T200000Z.json
src/: coherence.h  phantom.h  seed.h
src/ai_interface/: aios_contract.h  transmit.cpp
src/core/: hyperlogic.cpp  observer.cpp
src/restore/: restore_coherence.cpp  restore_coherence.h  threshold_manager.cpp  threshold_manager.h  topography_manager.cpp  topography_manager.h
tests/: test_coherence.cpp
